Make top panel stick, fix scrollbars

--- a/cesta-do-jeruzalema/src/app/app.component.less
+++ b/cesta-do-jeruzalema/src/app/app.component.less
@@ -1,3 +1,6 @@
+
+@header-height: 64px;
+
 .progress {
     height: 130px;
     display: flex;
@@ -12,4 +15,18 @@
 
 .google-map {
     width: 100%;;
+}
+
+.header {
+    position: fixed;
+    width: 100vw;
+    z-index: 100;
+}
+
+.main-content-wrapper {
+    margin-top: @header-height;
+}
+
+.content {
+    height: calc(100vh - @header-height);
 }
